# gh-pages-transcript

./: .gitignore  LICENSE  README.md  create_pr.py  db.py  format.py  main.py  pocket_casts.py  pyproject.toml  q.py  rag.ipynb  search.py  selector.py  test_db_integration.py  whisper.py  whisper_context.json  yt_liked.py  yt_subtitle.py
tests/: cn-1.txt  cn-2.txt  en-1.txt
